Bug 45724 - FILESAVE: DOC - Text field data loss and regression in background color
Summary: FILESAVE: DOC - Text field data loss and regression in background color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: All All
: high critical
Assignee: Miklos Vajna
URL:
Whiteboard: target:3.7.0 target:3.5.6 target:3.6.1
Keywords: regression
Depends on:
Blocks: DOC Form-Controls mab3.5
  Show dependency treegraph
 
Reported: 2012-02-06 16:31 UTC by fornar
Modified: 2017-05-14 00:22 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
.odt file with test field sample. (13.15 KB, application/vnd.oasis.opendocument.text)
2012-02-06 16:31 UTC, fornar
Details
Above .odt file saved as .doc missing data entered in text field (13.00 KB, application/msword)
2012-02-06 16:35 UTC, fornar
Details
example odt which when saved as docx format, loses data (9.82 KB, application/vnd.oasis.opendocument.text)
2012-08-16 06:56 UTC, Bernard Gray
Details
example docx file which has lost data compared to the originally attached odt file (3.36 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2012-08-16 06:57 UTC, Bernard Gray
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fornar 2012-02-06 16:31:09 UTC
Created attachment 56694 [details]
.odt file with test field sample.

Data is not retained within a text box when an odt file is saved as a .doc or .docx

I created a file under .odt but once i have finished with the document and filled out my text fields i need to save it as a .doc as sending it to people who only have MS Office.

When opening the file with MS Office (Office 2000 and 2007) the data that was in the text field has disappeared. Trying to open the .doc file in LibreOffice also shows the file missing data. Opening the original .odt file in LibreOffice the data can be seen.

To recreate document:
1/ Select Form Control Toolbar  (View → Toolbars → Form Controls)
2/ Turn On Design Mode (icon on Form Control toolbar)
3/ Draw a “Text Box”
4/ Turn Off Design Mode
5/ Enter text data into text box
6/ Save document as a .doc file.
7/ Open MS format ver in LibreOffice OR MS Office – data (and most formatting) lost!

Sample documents attached.
Comment 1 fornar 2012-02-06 16:35:59 UTC
Created attachment 56695 [details]
Above .odt file saved as .doc missing data entered in text field
Comment 2 fornar 2012-03-27 18:21:14 UTC
Have now tested in LibO 3.5.0 and 3.5.1.2 and still have the same issue
Comment 3 Bill Robertson 2012-03-27 20:36:17 UTC
Can confirm this issue on both LibreOffice 3.4.5 and 3.5.1
Comment 4 Shane Dunn 2012-03-28 15:47:28 UTC Comment hidden (obsolete)
Comment 5 gerardsimms 2012-04-01 16:24:23 UTC Comment hidden (obsolete)
Comment 6 Bernard Gray 2012-04-03 18:00:43 UTC
also affects me - a vote to fix please :)
Comment 7 Janine 2012-04-03 19:20:03 UTC
Is a problem for me too - would love a fix!!!
Comment 8 sasha.libreoffice 2012-04-04 08:49:42 UTC
reproduced in 3.3.4 and 3.5.2.2 on Fedora 64 bit
saving forms to doc, docx, rtf, html or not saves forms or not saves content

*regression* in 3.5.2: after saving to doc format, color of form becomes black
(in 3.4.3 it saves correctly)

msWord 2007 on Windows 7 opens attached odt file without form
impossible to copy-paste content of this file from Writer to Word, Word outputs error "Wrong selection", nothing pastes 

changing version to 3.3.4 as most early reproducible main problem
Comment 9 Rene' Fiby 2012-04-04 20:08:30 UTC
also affects me - a vote to fix please
Comment 10 Sheline 2012-04-04 20:09:59 UTC
can confirm on version 3.5.1.2. Would be great to get this fixed :-)
Comment 11 Julien Nabet 2012-05-04 11:42:18 UTC
Noticed this during the export of odt to doc (Debian pc x86-64, master updated today) :
warn:legacy.osl:30293:1:/home/julien/compile-libreoffice/libo/svtools/source/filter/wmf/emfwr.cxx:1437: EMFWriter::ImplWriteActions: unsupported MetaAction #150

I don't know if it's linked or not.
Comment 12 Miklos Vajna 2012-07-31 10:49:59 UTC
I'll look into this. It seems the textbox value was already broken in 3.4, the background color is indeed a regression; works fine in 3.4, but broken in 3.5.
Comment 13 Miklos Vajna 2012-07-31 10:51:53 UTC
Oh, forgot to mention that I'm talking about doc export, the docx textbox export is completely missing, so can't be a regression. (Let's track that in a separate non-regression bug if implementation of that is wished.)
Comment 14 Not Assigned 2012-08-01 08:59:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=684539e19ef7a54afcb2c4f24ba966ec04a2ad87

fdo#45724 fix WW8 export of textbox default background color
Comment 15 Not Assigned 2012-08-01 08:59:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=12a35ec8905559a5f2e0e00f792489bbcf0095db

fdo#45724 improve WW8 textbox export
Comment 16 Not Assigned 2012-08-01 08:59:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a69691ff8c1cfeca6b67973000d17fa01947a0a5

fdo#45724 testcase
Comment 17 Miklos Vajna 2012-08-01 09:08:44 UTC
Fixed the textbox background color regression and the textbox value dataloss in master, marking as resolved.

I've requested cherry-pick of these fixes to -3-6 and -3-5, so they will follow soon.
Comment 18 Not Assigned 2012-08-01 09:31:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1db74f95ca260b65e04f7ed3e11f2bb36d3d8414&g=libreoffice-3-5

fdo#45724 fix WW8 export of textbox default background color


It will be available in LibreOffice 3.5.6.
Comment 19 Not Assigned 2012-08-01 09:31:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76c05c56d19f0643fb99375ef8315e931f87de59&g=libreoffice-3-5

fdo#45724 improve WW8 textbox export


It will be available in LibreOffice 3.5.6.
Comment 20 Not Assigned 2012-08-01 09:37:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=88c0f4e9a28db4f2947c1c7469f54b76e88a3052&g=libreoffice-3-6

fdo#45724 fix WW8 export of textbox default background color


It will be available in LibreOffice 3.6.1.
Comment 21 Not Assigned 2012-08-01 09:37:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2909cf76a701b4860b849fc1aa90fc2046bfbe00&g=libreoffice-3-6

fdo#45724 improve WW8 textbox export


It will be available in LibreOffice 3.6.1.
Comment 22 sasha.libreoffice 2012-08-02 06:15:40 UTC
Thanks for fixing this bug
Comment 23 Bernard Gray 2012-08-16 06:56:34 UTC
Created attachment 65631 [details]
example odt which when saved as docx format, loses data
Comment 24 Bernard Gray 2012-08-16 06:57:26 UTC
Created attachment 65632 [details]
example docx file which has lost data compared to the originally attached odt file
Comment 25 Bernard Gray 2012-08-16 06:58:46 UTC
Thanks for your work on this Miklos, the .doc saving has definitely been resolved, but the .docx saving is still broken.

I have attached example documents, and reopened the bug -

Regards,
Bernard
Comment 26 sasha.libreoffice 2012-08-16 07:02:01 UTC
@ Bernard Gray
Please, create separate bugreport for docx format. This bugreport already has too many comments.
Comment 27 Bernard Gray 2012-08-17 00:31:14 UTC
@sasha.libreoffice@gmail.com

The docx bug was included in this original report - therefore I believe reopening this bug is the most correct thing to do.
I'm worried if I create another bug it's just going to be closed and marked as a duplicate of this.

Are you a libreoffice developer? I just want to know where your coming from with your recommendation.
Comment 28 Miklos Vajna 2012-08-17 07:27:39 UTC
Hi Bernard,

I agree with Sasha here. Here is the background: when we see a bug number, ideally we want to be able to think about a single problem -- for example "this problem is visible since the fix for bug xxx". If we fix independent issues with the same bug number, that's impossible.

I try not to be rude, so I'm not closing this bug again -- but please once you opened a bug for the docx filter, let's close this one.

Thanks,

Miklos
Comment 29 Bernard Gray 2012-08-30 00:34:38 UTC
Created bug #54235 for continuing docx issue:
https://bugs.freedesktop.org/show_bug.cgi?id=54235

Resetting status to resolved/fixed
Comment 30 Bill Robertson 2012-08-30 08:50:18 UTC
Can confirm resolved for .doc when running LibreOffice LibreOffice "Version 3.6.1.2 (Build ID: e29a214)" running under Ubuntu.  Many thanks!

Note: .docx still problematic (refer bug #54235)

Regards
Bill