fdo#45724 fix WW8 export of textbox default background color

regression from 5609c512cd4d2899300b432d88d93cff05a05c87

Change-Id: I5f3ce73943b2805b7de1ae41699e605af9086b15